--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.9.0",
+    "@upstash/redis": "^1.35.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "csv-parse": "^5.6.0",
@@ -21,7 +22,6 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.513.0",
     "next": "^15.3.3",
-    "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -43,6 +43,7 @@
     "@types/react-dom": "^19",
     "@types/socket.io": "^3.0.1",
     "@types/web-push": "^3.6.4",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
