--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.9.0",
     "@upstash/redis": "^1.35.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
